Inital progress on porting to 1.18.1 Almost everything works, except: * advancements * all worldgen (Temple and Ore) * maybe some other things(10% of chance)
Basically works, but needs a lot of testing